# minimesh

./: .gitignore  README.md
examples/: demo.py
minimesh/: Cargo.toml  pyproject.toml
minimesh-lib/: Cargo.toml
minimesh-lib/src/: lib.rs  main.rs  read_and_write.rs
minimesh/src/: lib.rs
src/: lib.rs  main.rs  read_and_write.rs  vectors.rs
stl/: ball_centered_25.stl  cube.stl
